--- a/index.html
+++ b/index.html
@@ -519,9 +519,9 @@ class Agent {
 		this.score += numGood - numBad
 		text("Score: "+this.score, 125, 50)
 		sensors.forEach((sensor) => {
-			if(state.length == 5)
+			if(sensor.length == 5) {
 				state.concat(sensor)
-			else {
+			} else {
 				for(let j = 0; j < 5; j++) {
 					state.push(0)
 				}
