--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ class Agent {
 					}
 					counter += 1
 				})
-				if(sensors[degIndex][2] !== undefinedd) {
+				if(sensors[degIndex][2] !== undefined) {
 					if(dist < sensors[degIndex][2]) {
 						sensors[degIndex][2] = dist
 						sensors[degIndex][3] = 1
