--- a/index.html
+++ b/index.html
@@ -415,8 +415,10 @@ class Agent {
 			//sensors[degIndex].push(1)
 			
 		} else {
-			sensors[degIndex][0] = 0
-			sensors[degIndex][1] = 0
+			for(let i = 0; i < degIndexes.length; i++) {
+				sensors[i][0] = 0
+				sensors[i][1] = 0
+			}
 		}
 		
 		redBalls.forEach((ball) => {
@@ -476,8 +478,10 @@ class Agent {
 				}
 			}
 			} else {
-				sensors[degIndex][2] = 0
-				sensors[degIndex][3] = 0
+				for(let i = 0; i < degIndexes.length; i++) {
+					sensors[i][2] = 0
+					sensors[i][3] = 0
+				}
 			}
 			
 		})
@@ -540,8 +544,10 @@ class Agent {
 				}
 				}
 			} else {
-				sensors[degIndex][4] = 0
-				sensors[degIndex][5] = 0
+				for(let i = 0; i < degIndexes.length; i++) {
+					sensors[i][4] = 0
+					sensors[i][5] = 0
+				}
 			}
 			
 		})
