--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ class Agent {
 			//sensors[degIndex].push(1)
 			
 		} else {
-			for(let i = 0; i < degIndexes.length; i++) {
+			for(let i = 0; i < degreeIndexes.length; i++) {
 				sensors[i][0] = 0
 				sensors[i][1] = 0
 			}
@@ -478,7 +478,7 @@ class Agent {
 				}
 			}
 			} else {
-				for(let i = 0; i < degIndexes.length; i++) {
+				for(let i = 0; i < degreeIndexes.length; i++) {
 					sensors[i][2] = 0
 					sensors[i][3] = 0
 				}
@@ -544,7 +544,7 @@ class Agent {
 				}
 				}
 			} else {
-				for(let i = 0; i < degIndexes.length; i++) {
+				for(let i = 0; i < degreeIndexes.length; i++) {
 					sensors[i][4] = 0
 					sensors[i][5] = 0
 				}
