--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ class Agent {
 		let degreeIndexes = [[0, 44], [45, 89], [90, 134], [135,179], [180, 224], [225, 269], [270, 314], [315, 360]]
 		let sensors = []
 		for(let i = 0; i < degreeIndexes.length; i++) {
-			sensors.push([0, 0, 0, 0, 0, 0])
+			sensors.push([])
 		}
 		
 		//For each wall set distance, angle and color
