--- a/index.html
+++ b/index.html
@@ -414,12 +414,13 @@ class Agent {
 			//sensors[degIndex].push(0)
 			//sensors[degIndex].push(1)
 			
-		} else {
+		} 
+		/*else {
 			for(let i = 0; i < degreeIndexes.length; i++) {
 				sensors[i][0] = 0
 				sensors[i][1] = 0
 			}
-		}
+		}*/
 		
 		redBalls.forEach((ball) => {
 			let degIndex = undefined
@@ -473,12 +474,13 @@ class Agent {
 					}
 				}
 			}
-			} else {
+			} 
+			/*else {
 				for(let i = 0; i < degreeIndexes.length; i++) {
 					sensors[i][2] = 0
 					sensors[i][3] = 0
 				}
-			}
+			}*/
 			
 		})
 		redBalls = redBalls.filter(val => !(balls2Remove.includes(val)))
@@ -536,12 +538,13 @@ class Agent {
 					}
 				}
 				}
-			} else {
+			} 
+			/*else {
 				for(let i = 0; i < degreeIndexes.length; i++) {
 					sensors[i][4] = 0
 					sensors[i][5] = 0
 				}
-			}
+			}*/
 			
 		})
 		greenBalls = greenBalls.filter(val => !(balls2Remove.includes(val)))
