--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ function draw() {
   
   agent.act()
 	if(iteration == 0)
-		image(img, (width/2)-50, (height/2)-50, agentWidth, agentHeigt)
+		image(img, (width/2)-50, (height/2)-50, agentWidth, agentHeight)
   	else 
 		image(img, agent.centerX - 50, agent.centerY - 50, agentWidth, agentHeight)
   iteration += 1
