--- a/index.html
+++ b/index.html
@@ -819,6 +819,7 @@ class Agent {
 			this.rlagent.learn(reward)
 		} else {
 			this.rlagent.learn(-1)
+			text("Contradicting Action: -1", this.centerX, this.centerY + agentHeight/2)
 		}
 			
 	} else {
@@ -832,6 +833,7 @@ class Agent {
 			this.rlagent.learn(reward)
 		} else {
 			this.rlagent.learn(-1)
+			text("Contradicting Action: -1", this.centerX, this.centerY + agentHeight/2)
 		}
 	
 	}
