--- a/index.html
+++ b/index.html
@@ -830,6 +830,8 @@ class Agent {
 				text("Contradicting Action: -1", this.centerX, this.centerY - agentHeight/2)
 			else if(this.centerY <= agentHeight /2)
 				text("Contradicting Action: -1", this.centerX, this.centerY + agentHeight/2)
+			else 
+				text("Contradicting Action: -1", this.centerX-50, this.centerY - 60)
 		}
 			
 	} else {
@@ -854,6 +856,8 @@ class Agent {
 				text("Contradicting Action: -1", this.centerX, this.centerY - agentHeight/2)
 			else if(this.centerY <= agentHeight /2)
 				text("Contradicting Action: -1", this.centerX, this.centerY + agentHeight/2)
+			else 
+				text("Contradicting Action: -1", this.centerX-50, this.centerY - 60)
 		}
 	
 	}
