--- a/index.html
+++ b/index.html
@@ -819,6 +819,7 @@ class Agent {
 			this.rlagent.learn(reward)
 		} else {
 			this.rlagent.learn(-1)
+			this.score += -1
 			textSize(fontsize)
 			if(white) fill(0)
 			else fill(255)
@@ -845,6 +846,7 @@ class Agent {
 			this.rlagent.learn(reward)
 		} else {
 			this.rlagent.learn(-1)
+			this.score += -1
 			textSize(fontsize)
 			if(white) fill(0)
 			else fill(255)
