--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@ class Agent {
 			textSize(fontsize)
 			if(white) fill(0)
 			else fill(255)
-			let x = undefined
-			let y = undefined
+			let x = this.centerX
+			let y = this.centerY
 			if(this.centerX >= width - agentWidth / 2 - 5)
 				x = this.centerX - agentWidth/2 - 5
 			else if(this.centerX  <= agentWidth / 2 + 5)
@@ -824,8 +824,8 @@ class Agent {
 			textSize(fontsize)
 			if(white) fill(0)
 			else fill(255)
-			let x = undefined
-			let y = undefined
+			let x = this.centerX
+			let y = this.centerY
 			if(this.centerX >= width - agentWidth / 2 - 5)
 				x = this.centerX - agentWidth/2 - 5
 			else if(this.centerX  <= agentWidth / 2 + 5)
@@ -856,8 +856,8 @@ class Agent {
 			textSize(fontsize)
 			if(white) fill(0)
 			else fill(255)
-			let x = undefined
-			let y = undefined
+			let x = this.centerX
+			let y = this.centerY
 			if(this.centerX >= width - agentWidth / 2 - 5)
 				x = this.centerX - agentWidth/2 - 5
 			else if(this.centerX  <= agentWidth / 2 + 5)
