--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ class Agent {
 			if(white) fill(0)
 			else fill(255)
 			let x = this.centerX
-			let y = this.centerY
+			let y = this.centerY + 55
 			if(this.centerX >= width - agentWidth / 2 - 5)
 				x = this.centerX - agentWidth/2 - 5
 			else if(this.centerX  <= agentWidth / 2 + 5)
@@ -825,7 +825,7 @@ class Agent {
 			if(white) fill(0)
 			else fill(255)
 			let x = this.centerX
-			let y = this.centerY
+			let y = this.centerY + 55
 			if(this.centerX >= width - agentWidth / 2 - 5)
 				x = this.centerX - agentWidth/2 - 5
 			else if(this.centerX  <= agentWidth / 2 + 5)
@@ -857,7 +857,7 @@ class Agent {
 			if(white) fill(0)
 			else fill(255)
 			let x = this.centerX
-			let y = this.centerY
+			let y = this.centerY + 55
 			if(this.centerX >= width - agentWidth / 2 - 5)
 				x = this.centerX - agentWidth/2 - 5
 			else if(this.centerX  <= agentWidth / 2 + 5)
